--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,8 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:node/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:node/recommended"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -104,11 +102,10 @@
     // Node
     "node/no-unpublished-import": 0,
 
-    // Typescript
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/no-empty-function": 0,
-    "@typescript-eslint/no-use-before-define": 0,
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": 0
+    "node/no-missing-import": ["error", {
+      "allowModules": [],
+      "resolvePaths": ["src"],
+      "tryExtensions": [".js", ".jsx"]
+    }]
   }
 }
