--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,9 @@
     "dot-notation": 2,
     "no-alert": 2,
     "object-shorthand": [2, "always"],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    //"no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": "warn",
+    "no-unused-vars": "warn",
 
     // Style
     "array-bracket-spacing": 2,
